Changes in Margin

--- a/PROJETO CONCLUIDO.html
+++ b/PROJETO CONCLUIDO.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/Challange-1.css">
+    <link rel="stylesheet" href="./Challange-1.css">
     <title>Quem sou eu!</title>
 </head>
 
@@ -50,7 +50,7 @@
     <h4><i>Minha foto</i></h4>
 
 
-    <img src="./Evander.jpg" width="400px" height="400px" >
+    <img src="./Assets/evander.jpg" width="400px" height="400px" >
 </body>
 
 </html>
